src/components/AppLayout/AppLayout.module.css
/* AppLayout */
.main {
  display: flex;
  flex-direction: column;
  min-height: 100dvh;
  background: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-8));
}

.mainContent {
  flex: 1;
}

/* SideNavbar - Logo Section */
.logoSection {
  display: flex;
  align-items: center;
  justify-content: center;
  min-height: 56px;
  position: relative;
  margin-bottom: 5px;
}

.logoSection::after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 50%;
  transform: translateX(-50%);
  width: calc(100% - 20px);
  height: 1px;
  background: light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-5));
}

.brandIcon {
  height: 40px;
  width: 48px;
  flex-shrink: 0;
}

/* SideNavbar */
.navToggleSection {
  border-top: 0.5px solid light-dark(var(--mantine-color-shadowSlate-1), var(--mantine-color-shadowSlate-7));
  display: flex;
  justify-content: flex-end;
}

.navToggleSectionCollapsed {
  justify-content: center;
}

/* SideNavbar - Group divider */
.navGroupDivider {
  width: 80%;
  align-self: center;
  margin-block: 4px;
}

/* SideNavbarItem */
.collapsedItem {
  width: 100%;
  border-radius: var(--mantine-radius-sm);
}

/* ContentFooter */
.footer {
  border-top: 1px solid light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-5));
}

